Closed
Bug 452296
Opened 17 years ago
Closed 17 years ago
Old sent box not imported after updating Eudora
Categories
(Thunderbird :: Migration, defect)
Thunderbird
Migration
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b1
People
(Reporter: info, Assigned: beckley)
References
Details
Attachments
(1 file)
|
4.10 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; nl; rv:1.8.1.16) Gecko/20080702 Firefox/2.0.0.16
Build Identifier: Eudora 8.0.0b3
After downloading the beta version of Eudora 8, all mailboxes are imported, except for the 'sent' (former 'out'-)box.
Reproducible: Couldn't Reproduce
Steps to Reproduce:
1.
2.
3.
Comment 1•17 years ago
|
||
This is handled by the migration component and not the installer
Component: Installer → Migration
QA Contact: installer → migration
Comment 2•17 years ago
|
||
Should this be moved from Thunderbird to Penelope, or is the migration code shared?
Comment 3•17 years ago
|
||
The eudora import code is all in core, right?
Comment 5•17 years ago
|
||
The initial bug post for this says it can't be reproduced. I posted #442384 which does have steps to repro - several users have confirmed them. I'll repost those here since this seems to be the live ticket:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9)
Gecko/2008052906 Firefox/3.0 eMusic DLM/4.0_1.0.0.1
Build Identifier: 8.0.0b3
I ran the install/import process for 8.0.0b3. I was impressed that almost all
my folders were imported perfectly (hundreds of folders and 100,000+ messages).
The Outbox in Eudora 7 was NOT imported at all. The folder didn't exist and the
messages in that folder were no where to be found.
Reproducible: Always
Steps to Reproduce:
1. Have a Eudora 7 client installed with sent messages in Outbox folder
2. Install Eudora 8
3. Choose import all from Eudora 7
4. Complete installation, load Eudora 8
Actual Results:
There is no Outbox folder and the messages from Outbox in Eudora 7 are missing.
Expected Results:
Outbox messages and folder from Eudora 7 should exist after import process in
Eudora 8.
| Assignee | ||
Comment 6•17 years ago
|
||
All of the mailbox import code for Eudora is in the core, so this will affect Thunderbird as well.
Turns out that the Out mailbox will import if you perform the import on just mailboxes alone (Tools->Import->Mail), but won't if you do a full migration (Tools->Import->Import Everything or start up with no profile or -migration command-line argument).
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → beckley
OS: Windows XP → All
Hardware: PC → All
Version: unspecified → Trunk
| Assignee | ||
Updated•17 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 7•17 years ago
|
||
Here's a fix. The problem was that the name of the "Out" mailbox from Classic Eudora was getting translated/renamed to "Unsent Messages" during migration, and creating/opening the "Unsent Messages" folder was failing. With this patch the code will rename the mailbox to "Sent" (which is what most if not all messages in the Out mailbox are).
I also added code at the global import level to do name translation/renaming only on folders at the root/top level as that's the only place where special folders reside. While I was in there I also fixed some code indent near where the changes were made.
Attachment #343870 -
Flags: superreview?(bienvenu)
Attachment #343870 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #343870 -
Flags: superreview?(bienvenu)
Attachment #343870 -
Flags: superreview+
Attachment #343870 -
Flags: review?(bienvenu)
Attachment #343870 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
Comment 8•17 years ago
|
||
Checked in, changeset id 658:7ac0a06fb2be
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b1
You need to log in
before you can comment on or make changes to this bug.
Description
•