Bug 452296 - "Old sent box not imported after updating Eudora" [r+sr=bienvenu]